apps/prowlarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.ramoneees.com`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: wildcard-ramoneees-com-tls
